--- a/apps/huckleberry-docs/project.json
+++ b/apps/huckleberry-docs/project.json
@@ -25,6 +25,12 @@
         "command": "docusaurus serve --dir=build",
         "cwd": "apps/huckleberry-docs"
       }
+    },
+    "lint": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "echo 'No linting required for docs.'"
+      }
     }
   },
   "tags": ["docs"]
