--- a/apps/huckleberry-docs/project.json
+++ b/apps/huckleberry-docs/project.json
@@ -30,7 +30,8 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "echo 'No linting required for docs.'"
-      }
+      },
+      "outputs": []
     }
   },
   "tags": ["docs"]
