feat(extension): add typechecking capability for huckleberry extension
Implements typechecking for the huckleberry extension to ensure code quality:
- Adds a typecheck target that runs TypeScript compiler without emitting files.
- Ensures that type errors are caught during development.

Closes #42

--- a/apps/huckleberry-docs/project.json
+++ b/apps/huckleberry-docs/project.json
@@ -32,6 +32,13 @@
         "command": "echo 'No linting required for docs.'"
       },
       "outputs": []
+    },
+    "typecheck": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "echo 'No typechecking required for docs.'"
+      },
+      "outputs": []
     }
   },
   "tags": ["docs"]
