refactor(extension): simplify build command execution
Updates the build command in the huckleberry extension to use a shell command for execution:
- Changes the command from a direct string to a shell command wrapped in 'sh -c'.
- Ensures consistency with other commands in the project.

No functional changes are introduced.

--- a/apps/huckleberry-docs/project.json
+++ b/apps/huckleberry-docs/project.json
@@ -15,7 +15,7 @@
       "executor": "nx:run-commands",
       "outputs": ["{projectRoot}/build"],
       "options": {
-        "command": "docusaurus build",
+        "command": "sh -c 'docusaurus build'",
         "cwd": "apps/huckleberry-docs"
       }
     },
