--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -87,16 +87,24 @@ jobs:
       - name: Build affected
         run: |
           echo "### 🏗️ Build Process" >> $GITHUB_STEP_SUMMARY
-          if pnpm run build:affected -- --base=${{ steps.base-branch.outputs.base-branch }}; then
+          set -o pipefail
+          pnpm run build:affected -- --base=${{ steps.base-branch.outputs.base-branch }} 2>&1 | tee build.log
+          BUILD_EXIT_CODE=${PIPESTATUS[0]}
+          if [ $BUILD_EXIT_CODE -eq 0 ]; then
             echo "✅ Build completed successfully for affected projects" >> $GITHUB_STEP_SUMMARY
             echo "Affected projects:" >> $GITHUB_STEP_SUMMARY
             echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
             pnpm exec nx print-affected --base=${{ steps.base-branch.outputs.base-branch }} --type=app >> $GITHUB_STEP_SUMMARY
+            echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
           else
-            echo "❌ Build failed for affected projects" >> $GITHUB_STEP_SUMMARY
-            exit 1
+            if grep -q 'No tasks were run' build.log; then
+              echo "ℹ️ No build tasks were run (docs-only or non-buildable changes). Treating as success." >> $GITHUB_STEP_SUMMARY
+              exit 0
+            else
+              echo "❌ Build failed for affected projects" >> $GITHUB_STEP_SUMMARY
+              exit 1
+            fi
           fi
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
           
       - name: Validation Summary
         if: always()
